--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,36 @@
-/* 定义 CSS 变量 */
+/* 定义CSS变量 */
 :root {
-    /* 主题颜色 - 日间模式 */
+    /* 默认主题（日间模式） */
     --bg-color: #f4f4f4;
     --text-color: #333333;
     --header-bg-color: #f4f4f4;
-    --header-text-color: #ffffff;
+    --header-text-color: #333333;
     --sidebar-bg-color: #f4f4f4;
-    --sidebar-text-color: #ffffff;
+    --sidebar-text-color: #333333;
     --footer-bg-color: #f4f4f4;
-    --footer-text-color: #ffffff;
-    --toggle-bg-color: #ffffff;
-    --toggle-text-color: #35424a;
+    --footer-text-color: #333333;
+    --link-color: #35424a;
+    --link-hover: #1e90ff;
+    --button-background: #ffffff;
+    --button-text-color: #35424a;
+    --button-hover: #e0e0e0;
 }
 
 body.dark-theme {
-    /* 主题颜色 - 夜间模式 */
+    /* 夜间主题 */
     --bg-color: #121212;
     --text-color: #e0e0e0;
-    --header-bg-color: #121212;
+    --header-bg-color: #1e1e1e;
     --header-text-color: #e0e0e0;
-    --sidebar-bg-color: #121212;
+    --sidebar-bg-color: #1e1e1e;
     --sidebar-text-color: #e0e0e0;
-    --footer-bg-color: #121212;
+    --footer-bg-color: #1e1e1e;
     --footer-text-color: #e0e0e0;
-    --toggle-bg-color: #333333;
-    --toggle-text-color: #e0e0e0;
+    --link-color: #e0e0e0;
+    --link-hover: #1e90ff;
+    --button-background: #333333;
+    --button-text-color: #e0e0e0;
+    --button-hover: #555555;
 }
 
 body {
