--- a/styles.css
+++ b/styles.css
@@ -244,13 +244,28 @@ section a:hover {
 }
 
 /* 手风琴样式 */
-.accordion-header, .accordion-content {
-    transition: background-color 0.3s, color 0s; /* 确保颜色平滑过渡 */
+
+.accordion-content {
+    transition: background-color 0.3s ease, color 0.3s ease, max-height 0.3s ease, padding 0.3s ease;
+    max-height: 0;
+    overflow: hidden;
+    color: var(--text-color); /* 动态使用变量 */
+    background-color: var(--bg-color);
+    padding: 0 15px;
 }
 
-body.dark-theme .accordion-header,
 body.dark-theme .accordion-content {
-    transition: background-color 0.3s, color 0s; /* 与日间模式保持一致 */
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    transition: background-color 0.3s ease, color 0.3s ease, max-height 0.3s ease, padding 0.3s ease;
+}
+
+.accordion-header {
+    transition: background-color 0.3s, color 0.3s; /* 确保颜色平滑过渡 */
+}
+
+body.dark-theme .accordion-header {
+    transition: background-color 0.3s, color 0.3s; /* 与日间模式保持一致 */
 }
 
 .accordion-item {
@@ -290,12 +305,6 @@ body.dark-theme .accordion-content {
     transform: rotate(180deg); /* 箭头旋转180度 */
 }
 
-.accordion-content {
-    max-height: 0;
-    overflow: hidden;
-    background-color: var(--bg-color);
-    padding: 0 15px;
-}
 
 .accordion-item.active .accordion-content {
     padding: 10px;
@@ -332,6 +341,8 @@ body.dark-theme .accordion-header::after {
 body.dark-theme .accordion-item.active .accordion-content {
     background-color: var(--sidebar-bg-color);
 }
+
+
 
 body.dark-theme .accordion-content ul {
     list-style-type: circle;
